--- a/index.html
+++ b/index.html
@@ -17,35 +17,35 @@
 		<div class="container">
 			<div class="container" id="board">
 				<div class="row">
-					<div class="col-xs-4 square" id="square1button">
+					<div class="col-xs-4 square" id="square1">
 					<p id="square1"></p>
 				</div>
-					<div class="col-xs-4 square" id="square2button">
+					<div class="col-xs-4 square" id="square2">
 					<p id="square2"></p>
 				</div>
-					<div class="col-xs-4 square" id="square3button">
+					<div class="col-xs-4 square" id="square3">
 					<p id="square3"></p>
 				</div>
 				</div>
 				<div class="row">
-					<div class="col-xs-4 square" id="square4button">
+					<div class="col-xs-4 square" id="square4">
 					<p id="square4"></p>
 				</div>
-					<div class="col-xs-4 square" id="square5button">
+					<div class="col-xs-4 square" id="square5">
 					<p id="square5"></p>
 				</div>
-					<div class="col-xs-4 square" id="square6button">
+					<div class="col-xs-4 square" id="square6">
 					<p id="square6"></p>
 				</div>
 				</div>
 				<div class="row">
-					<div class="col-xs-4 square" id="square7button">
+					<div class="col-xs-4 square" id="square7">
 					<p id="square7"></p>
 				</div>
-					<div class="col-xs-4 square" id="square8button">
+					<div class="col-xs-4 square" id="square8">
 					<p id="square8"></p>
 				</div>
-					<div class="col-xs-4 square" id="square9button">
+					<div class="col-xs-4 square" id="square9">
 					<p id="square9"></p>
 				</div>
 				</div>
