game implemented (no AI)

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<link href="style.css" media="all" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
+		<div id="chooseSymbolDialog" title="Choose a symbol to play with">
+		</div>
 		<div class="container">
 			<div class="container" id="board">
 				<div class="row">
@@ -51,7 +53,9 @@
 				</div>
 			</div>
 			<footer class="footer container-fluid">
-				<p>Written and coded by <a href="http://www.freecodecamp.com/laramartin" target="_blank">Lara Martin
+				<p id="spoiler">Spoiler: no AI implemented</p>
+				<br/>
+				<p id="footer-ref">Written and coded by <a href="http://www.freecodecamp.com/laramartin" target="_blank">Lara Martin
 				</a> in the &hearts; of Berlin.</p>
 			</footer>
 		</div>
